--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,7 @@ jobs:
     container: astral/uv:python3.12-bookworm-slim
     steps:
       - name: Checkout
-        uses: actions/checkout@vs
+        uses: actions/checkout@v6
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
