--- a/pytest.ini
+++ b/pytest.ini
@@ -4,7 +4,7 @@
 # addopts = -s
 # 配置测试搜索的路径
 # 当前目录下的TestCases文件夹 -可自定义
-testpaths = ./TestCases
+testpaths = ./TestCase
 # 配置测试搜索的文件名
 # 当前目录下的testcase文件夹下，以test_开头，以.py结尾的所有文件 -可自定义
 python_files = test_*.py *_test.py
