--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,7 +19,8 @@ jobs:
          Python-version: '3.10'
       - name: Install independency
         run: pip install -r requirements.txt
+
       - name: run tests
-        run: pytest
+        run: pytest ./TestCase/ -v
 
 
