--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,9 +19,9 @@ jobs:
          Python-version: '3.10'
       - name: Install independency
         run: pip install -r requirements.txt
-#
-#      - name: run tests
-#        run: python run.py -v
+
+      - name: run tests
+        run: python run.py -v
 #jobs:
 #  test:
 #    runs-on: ubuntu-24.04
