--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,9 @@ jobs:
         with:
          Python-version: '3.10.12'
       - name: Install independency
-        run: pip install -r requirements.txt
+        run:
+          python -m pip install --upgrade pip          
+          pip install -r requirements.txt
 
       - name: run tests
         run: python run.py -v
