--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   test:
     runs-on: ubuntu-22.04
-    container: astral/uv:python3.12-bookworm-slim
+    container: python:3.10-slim
     steps:
       - name: Checkout
         uses: actions/checkout@v4
