--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,8 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-         Python-version: '3.10.12'
+         Python-version: '3.10.11'
+         architecture: 'x64
       - name: Install independency
         run:
           python -m pip install --upgrade pip          
