--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/setup-python@v5
         with:
          Python-version: '3.10.0'
-         architecture: 'x64
+         architecture: 'x64'
       - name: Install independency
         run:
           python -m pip install --upgrade pip          
