--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,13 +8,13 @@ on:
 
 jobs:
   test:
-    runs-on: ubuntu-22.04
-    container: python:3.10-slim
+    runs-on: ubuntu-20.04
+#    container: python:3.10-slim
     steps:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Set up Python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@v3
         with:
          Python-version: '3.10.0'
          architecture: 'x64'
